# easymedia

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: fetch-ffmpeg.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  presets.rs
src-tauri/src/ffmpeg/: builder.rs  mod.rs  probe.rs  runner.rs
src/components/dropzone/: Dropzone.tsx
src/components/options/: ConvertOptions.tsx  ExpertDrawer.tsx  ExtractAudioOptions.tsx  OptionsPanel.tsx  PresetBar.tsx  ToGifOptions.tsx  TrimOptions.tsx
src/components/progress/: ProgressView.tsx
src/components/tasks/: MediaCard.tsx  TaskSelector.tsx  TaskWorkspace.tsx
src/components/ui/: Button.tsx  Segmented.tsx
src/lib/: api.ts  media.test.ts  media.ts  tasks.test.ts  tasks.ts  types.ts
src/store/: useStore.ts
src/styles/: global.css
